--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,6 @@
 
 body {
   color: whitesmoke;
-  background-color: #0F172A;
+  background: #18607d;
+  background: linear-gradient(143deg, rgba(24, 96, 125, 1) 0%, rgba(12, 21, 26, 1) 23%, rgba(24, 61, 94, 1) 33%, rgba(2, 48, 79, 1) 43%, rgba(20, 44, 54, 1) 52%, rgba(8, 66, 87, 1) 64%, rgba(0, 0, 0, 1) 79%, rgba(17, 74, 92, 1) 100%);
 }
